# stable_diffusion.openvino

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-webdemo  Dockerfile_web  README.md  demo.py  demo_batch.py  demo_cli.py  demo_web.py  docker-compose-web.yaml  docker-compose.yaml  docker-compose_web.yaml  image_metadata.py  pyproject.toml  requirements.txt  requirements_web.txt  sd-web.bat  sd.bat  stable_diffusion.py  stable_diffusion_engine.py  starter_notebook.ipynb
.github/workflows/: docker-image.yml  main.yml
data/: models.json
stable_diffusion/: __init__.py  engine.py  pipeline.py
